# ucan-monitor-gtk

./: .gitignore  CMakeLists.txt  README.md  gresource.xml  meson.build  org.flatpak.ucan-monitor.yml  ucan-monitor.cmb  ucan-monitor.desktop  ucan-monitor.ui
cambalache/: ucan-monitor.cmb
cmake/check-git/: CheckGit.cmake  git_version.cpp.in  git_version.h
gui/: app_window.cpp  app_window.h  app_window.ui  application.vala  canbus_preferences.ui  canbus_preferences.vala  canbuspreferences.ui  canbuspreferences.vala  control_panel.ui  control_panel.vala  data_tables.ui  data_tables.vala  main.vala  monitor_application.c  monitor_application.h  monitor_headerbar.h  monitor_window.c  monitor_window.h  monitor_window.ui  select_server.vala  selectserver.ui  selectserver.vala  srmdrive_controlpanel.ui  srmdrive_controlpanel.vala  srmdrive_data_tables.ui  srmdrive_data_tables.vala  srmdrive_datatables.ui  srmdrive_datatables.vala  ucan_monitor_application.c  ucan_monitor_application.h  ucan_monitor_window.c  ucan_monitor_window.h  ucan_monitor_window.ui  ucanopen_serverconfiguration.ui  ucanopen_serverconfiguration.vala  window.ui  window.vala  window_canbuspreferences.ui  window_canbuspreferences.vala  window_canbusprefs.ui  (+3 more)
gui/advvchart/: axis.vala  background.vala  chart.vala  config.vala  font.vala  grid.vala  labels.vala  legend.vala  meson.build  path.vala  point.vala  series.vala  timeseek.vala  utils.vala  values.vala
gui/api/: atvvcm.vala  atvvcu.vala  bmsmain.vala  crd600.vala  launchpad.vala  srmdrive.vala  ucanopen.vala
gui/bmsmain/: bmsmain_datatables.ui  bmsmain_datatables.vala
gui/bmsmain21/: bmsmain21_datatables.ui  bmsmain21_datatables.vala
gui/components/: basic_entry.vala  bool_entry.vala  check_entry.vala  log_textview.vala  logtextview.vala  slider_with_text.vala  spinbutton_scale.ui  spinbutton_scale.vala  spinbuttonscale.vala  table_boolentry.ui  table_boolentry.vala  table_entry.ui  table_entry.vala  tableboolentry.ui  tableboolentry.vala  tablecheckentry.ui  tablecheckentry.vala  tableentry.ui  tableentry.vala
gui/gtk/: help-overlay.ui
gui/launchpad/: launchpad_controlpanel.ui  launchpad_controlpanel.vala  launchpad_datatables.ui  launchpad_datatables.vala
gui/srmdrive/: srmdrive_controlpanel.ui  srmdrive_controlpanel.vala  srmdrive_datatables.ui  srmdrive_datatables.vala
gui/template/: template_widget.ui  template_widget.vala
gui/ucanopen/: ucanopen_aboutserver.vala  ucanopen_heartbeatindicator.ui  ucanopen_heartbeatindicator.vala  ucanopen_preferenceswindow.vala  ucanopen_selectserverwindow.vala  ucanopen_serverconfiguration.ui  ucanopen_serverconfiguration.vala  ucanopen_systemstatus.vala  ucanopen_watchchart.vala
gui/ucanopen_devices/atvvcm/: atvvcm_controlpanel.ui  atvvcm_controlpanel.vala  atvvcm_datatables.ui  atvvcm_datatables.vala  atvvcm_motorcontrol.ui  atvvcm_motorcontrol.vala  atvvcm_motordata.ui  atvvcm_motordata.vala  atvvcm_pdmcontrol.ui  atvvcm_pdmcontrol.vala  atvvcm_pdmdata.ui  atvvcm_pdmdata.vala
gui/ucanopen_devices/atvvcu/: atvvcu_controlpanel.ui  atvvcu_controlpanel.vala  atvvcu_datatables.ui  atvvcu_datatables.vala  atvvcu_motorcontrol.ui  atvvcu_motorcontrol.vala  atvvcu_motordata.ui  atvvcu_motordata.vala  atvvcu_pdmcontrol.ui  atvvcu_pdmcontrol.vala  atvvcu_pdmdata.ui  atvvcu_pdmdata.vala
gui/ucanopen_devices/bmsmain/: bmsmain_datatables.ui  bmsmain_datatables.vala
gui/ucanopen_devices/crd600/: crd600_controlpanel.ui  crd600_controlpanel.vala  crd600_datatables.ui  crd600_datatables.vala
gui/ucanopen_devices/launchpad/: launchpad_controlpanel.ui  launchpad_controlpanel.vala  launchpad_datatables.vala
gui/ucanopen_devices/srmdrive/: srmdrive_controlpanel.ui  srmdrive_controlpanel.vala  srmdrive_datatables.ui  srmdrive_datatables.vala
gui/widgets/: system_status.vala  systemstatus.ui  systemstatus.vala
obsolete/: main.cpp  monitor_headerbar.cpp  monitor_window.h
scripts/: socketcan_check.sh  socketcan_enable.sh
src/: main.c  main.cpp
src/api/: atv.cpp  atv_vcm.cpp  atvvcm.cpp  atvvcu.cpp  bmsmain.cpp  bmsmain21.cpp  cansocket.cpp  crd600.cpp  devices.cpp  launchpad.cpp  srmdrive.cpp  ucanopen.cpp  ucanopen_client.cpp  ucanopen_devices.cpp
src/atv/: atv_def.h
src/atv/gearselector/: gearselector.cpp  gearselector.h
src/atv/leaf_inverter/: leaf_inverter.cpp  leaf_inverter.h
src/atv/vcm/: vcm.cpp  vcm.h
src/c_wrappers/: c_cansocket.cpp  c_motordrive_controller.cpp  c_motordrive_dataprocessor.cpp  c_motordrive_observer.cpp  c_ucanopen.cpp
src/c_wrappers/cansocket/: c_cansocket.cpp  c_cansocket.h
src/cansocket/: cansocket.cpp  cansocket.h
src/gnuplotter/: gnuplotter.cpp  gnuplotter.h
src/gui/: application.vala  control_panel.ui  control_panel.vala  data_tables.ui  data_tables.vala  main.vala  window.ui  window.vala  window_canbusprefs.ui  window_canbusprefs.vala
src/gui/advvchart/: chart.vala  meson.build
src/gui/api/: ucanopen.vala
src/gui/assets/: window.ui
src/gui/components/: simple_table.ui  simple_table.vala  simple_table_row.ui  simple_table_row.vala  slider_with_text.ui  slider_with_text.vala  table_entry.ui  table_entry.vala  table_row.ui  table_row.vala
src/gui/template/: template_widget.vala
src/gui/ucanopen/: ucanopen_aboutserver.vala  ucanopen_heartbeatindicator.vala  ucanopen_preferenceswindow.vala  ucanopen_selectserverwindow.vala  ucanopen_serverconfiguration.vala  ucanopen_serverconfigurator.vala  ucanopen_serverselector.vala  ucanopen_systemstatus.vala  ucanopen_watchchart.vala
src/gui/widgets/: basic_entry.vala  bool_entry.vala  check_entry.vala  log_textview.vala  spinbutton_scale.vala
src/launchpad/server/: launchpad_objectdictionary.cpp  launchpad_server.cpp  launchpad_server.h
src/log/: log.cpp  log.h
src/logger/: logger.cpp  logger.h
src/motordrive/controller/: motordrive_controller.cpp  motordrive_controller.h
src/purecan/: purecan_def.h
src/purecan/device/: purecan_device.h  (+1 more)
src/ucanopen/: ucanopen_client.cpp  ucanopen_client.h  ucanopen_def.h  ucanopen_rpdodef.h  ucanopen_tpdodef.h
src/ui/: application.vala  main.vala  window.vala
(+149 files in other folders)
